--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "i18next": "^24.2.2",
     "i18next-browser-languagedetector": "^8.0.2",
     "lucide-react": "^0.475.0",
+    "motion": "^12.4.3",
     "next": "15.1.6",
     "next-intl": "^3.26.3",
     "next-themes": "^0.4.4",
