--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.5.2",
-    "framer-motion": "^12.4.1",
+    "framer-motion": "^12.4.3",
     "googleapis": "^144.0.0",
+    "gsap": "^3.12.7",
     "i18next": "^24.2.2",
     "i18next-browser-languagedetector": "^8.0.2",
     "lucide-react": "^0.475.0",
@@ -40,6 +41,7 @@
     "sonner": "^1.7.4",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.173.0",
     "vaul": "^1.1.2",
     "zod": "^3.24.1"
   },
@@ -48,6 +50,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/three": "^0.173.0",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
