--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "next": "15.1.6",
     "next-intl": "^3.26.3",
     "next-themes": "^0.4.4",
+    "ogl": "^1.0.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
