--- a/package.json
+++ b/package.json
@@ -41,7 +41,10 @@
     "react-hook-form": "^7.54.2",
     "react-i18next": "^15.4.1",
     "react-router-dom": "^7.1.5",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "sonner": "^1.7.4",
+    "swiper": "^11.2.4",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.173.0",
@@ -53,6 +56,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-slick": "^0.23.13",
     "@types/three": "^0.173.0",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
