--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "i18next": "^24.2.2",
     "i18next-browser-languagedetector": "^8.0.3",
     "lucide-react": "^0.475.0",
+    "mongoose": "^8.10.1",
     "motion": "^12.4.3",
     "next": "15.1.6",
     "next-intl": "^3.26.3",
