--- a/package.json
+++ b/package.json
@@ -32,10 +32,11 @@
     "i18next-browser-languagedetector": "^8.0.3",
     "lucide-react": "^0.475.0",
     "mongoose": "^8.10.1",
-    "motion": "^12.4.3",
+    "motion": "^12.4.7",
     "next": "15.1.6",
     "next-intl": "^3.26.3",
     "next-themes": "^0.4.4",
+    "next-video": "^2.1.0",
     "ogl": "^1.0.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
