--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.4.3",
     "googleapis": "^144.0.0",
