--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "embla-carousel-react": "^8.5.2",
-    "framer-motion": "^12.4.3",
+    "framer-motion": "^12.4.7",
     "googleapis": "^144.0.0",
     "gsap": "^3.12.7",
     "i18next": "^24.2.2",
     "i18next-browser-languagedetector": "^8.0.3",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.475.0",
+    "matter-js": "^0.20.0",
     "mongoose": "^8.10.1",
     "motion": "^12.4.7",
     "next": "15.1.6",
@@ -39,6 +41,7 @@
     "next-themes": "^0.4.4",
     "next-video": "^2.1.0",
     "ogl": "^1.0.11",
+    "poly-decomp": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
@@ -48,6 +51,7 @@
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
     "sonner": "^1.7.4",
+    "svg-path-commander": "^2.1.10",
     "swiper": "^11.2.4",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
